@@ -1,22 +1,19 @@
 <?xml version="1.0"?>
 <!--
- * Copyright (c)2010 Elsevier, Inc.
-
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- * The use of the Apache License does not indicate that this project is
- * affiliated with the Apache Software Foundation.
- -->
+ - Copyright 2006-2012 The FLWOR Foundation.
+ -
+ - Licensed under the Apache License, Version 2.0 (the "License");
+ - you may not use this file except in compliance with the License.
+ - You may obtain a copy of the License at
+ -
+ - http://www.apache.org/licenses/LICENSE-2.0
+ -
+ - Unless required by applicable law or agreed to in writing, software
+ - distributed under the License is distributed on an "AS IS" BASIS,
+ - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ - See the License for the specific language governing permissions and
+ - limitations under the License.
+-->
 <schema xmlns="http://www.w3.org/2001/XMLSchema"
            targetNamespace="http://www.zorba-xquery.com/modules/xml-options"
            elementFormDefault="qualified" attributeFormDefault="qualified">
@@ -66,7 +63,7 @@
                 </restriction>
               </simpleType>
             </attribute>            
-            <attribute name="skip-top-Level-text-nodes" type="boolean" use="optional"/>
+            <attribute name="skip-top-level-text-nodes" type="boolean" use="optional"/>
           </complexType>
         </element>
         <element name="substitute-entities" minOccurs="0" maxOccurs="1">
