@@ -31,7 +31,8 @@ class FragmentIStream : public std::istream
 {
 public:
   static const unsigned int BUFFER_SIZE = 2048;
-  static const unsigned int LOOKAHEAD_BYTES = 3;
+  static const unsigned int LOOKAHEAD_BYTES = 3; // lookahead fetching is implemented, but currently not used
+  static const unsigned int PARSED_NODES_BATCH_SIZE = 1024;
 
 public:
   FragmentIStream()
@@ -47,10 +48,16 @@ public:
     ctxt(NULL),
     first_start_doc(true),
     forced_parser_stop(false),
+    reached_eof(false),
     parsed_nodes_count(0),
     children(NULL)
   {
   };
+
+  bool stream_is_consumed()
+  {
+    return reached_eof && current_offset >= bytes_in_buffer;
+  }
 
   void reset()
   {
@@ -80,6 +87,7 @@ public:
     ctxt = NULL;
     first_start_doc = true;
     forced_parser_stop = false;
+    reached_eof = false;
     parsed_nodes_count = 0;
     children = NULL;
   }
@@ -100,7 +108,8 @@ public:
   xmlParserCtxtPtr ctxt;
   bool first_start_doc;
   bool forced_parser_stop;
-  int parsed_nodes_count;
+  bool reached_eof;
+  unsigned int parsed_nodes_count;
   store::Iterator_t children;
 };
 
